crates/ic-hir/tests/snapshots/annotation_redefinition__inconsistent_annotation_added_default.snap
---
source: crates/ic-hir/tests/annotation_redefinition.rs
assertion_line: 172
expression: diagnostics
---
error: inconsistent redefinition of annotation `@config`
   ┌ test.idl:2:21
   │
 2 │         @annotation config {
   ·                     ^^^^^^ originally defined here
 3 │             long timeout;
 4 │         };
 5 │ 
 6 │         @annotation config {
   ·                     ^^^^^^ redefined inconsistently here
 7 │             long timeout default 30;
 8 │         };
   └──
 note: annotation redefinitions must have the same parameters, types, and defaults
