crates/ic-hir/tests/snapshots/annotation_redefinition__inconsistent_annotation_different_default.snap
---
source: crates/ic-hir/tests/annotation_redefinition.rs
expression: diagnostics
---
⨯: inconsistent redefinition of annotation `@config`
  @ test.idl:2:21

 2 │ @annotation config {
   │             ˆˆˆˆˆˆ originally defined here
 3 │     long timeout default 30;
 4 │ };
 5 │ 
 6 │ @annotation config {
   │             ˆˆˆˆˆˆ redefined inconsistently here
 7 │     long timeout default 60;
 8 │ };

  * annotation redefinitions must have the same parameters, types, and defaults
