crates/ic-hir/tests/snapshots/annotation_redefinition__inconsistent_annotation_different_param_count.snap
---
source: crates/ic-hir/tests/annotation_redefinition.rs
expression: diagnostics
---
⨯: inconsistent redefinition of annotation `@my_doc`
  @ test.idl:2:21

 2 │ @annotation my_doc {
   │             ˆˆˆˆˆˆ originally defined here
 3 │     string value;
 4 │ };
 5 │ 
 6 │ @annotation my_doc {
   │             ˆˆˆˆˆˆ redefined inconsistently here
 7 │     string value;
 8 │     long priority;

  * annotation redefinitions must have the same parameters, types, and defaults
