crates/ic-hir/tests/snapshots/annotation_redefinition__inconsistent_annotation_different_param_name.snap
---
source: crates/ic-hir/tests/annotation_redefinition.rs
assertion_line: 116
expression: diagnostics
---
error: inconsistent redefinition of annotation `@my_doc`
   ┌ test.idl:2:21
   │
 2 │         @annotation my_doc {
   ·                     ^^^^^^ originally defined here
 3 │             string value;
 4 │         };
 5 │ 
 6 │         @annotation my_doc {
   ·                     ^^^^^^ redefined inconsistently here
 7 │             string description;
 8 │         };
   └──
 note: annotation redefinitions must have the same parameters, types, and defaults
